Development
    Cleanup the popup menu and have it work more like the normal control panel
    Why reinvent status icon menu, when normal popup menu has everything we need
    Implement simple status icon menu
    Add #EXTM3U to m3u saved playlists
    Allow cddb support to be optional in track loading
    Add tooltip to status icon
    Remember window location on hide
    Fix problems with playback when window is hidden
    Fix problems with streaming media on command line
    Change icon in tray to work like rhythmbox, always visible and it toggles the visibility of player
    On window minimise, put icon in tray, window returns on icon click (GTK 2.12 and higher)
    Update playlist name when items are added
    Set the playlist name on the master instance when running in replace and play mode
    Add in work around for gtk crash, when setting the default folder to a non-local uri
    Better m3u parser, meets specs a little better
    Handle previously unknown M3U file format
    Updated pls and m3u playlist saving to GIO support
    When media doesn't provide a title, fallback to the basename of the uri
    Rework show playlist patch, it didn't work right
    Remove the -idx option from mplayer command
    Make playlist visible on load only if playlist is loaded or if nothing loaded
    Fix problems with playlist name in playlist view
    Fix problem with open playlist button
    Fix problem with gecko-mediaplayer not passing uri, but filename and not adjusting
    Add in support for libnotify popups
    Rework the metadata parser to provide more info from the media file
    Fix some memory leaks
    Make View Subtitles and View Playlist menu items into checkboxes
    Move Details from File menu to View menu
    Rework the preferences dialog a little
    Make gio optional (useful for debugging)
    Make playlist processing GIO aware
    Fix bug in recent item selection
    Fix bug in streaming detection