@@ -199,6 +199,7 @@ GtkWidget *config_playlist_visible;
 GtkWidget *config_details_visible;
 GtkWidget *config_vertical_layout;
 GtkWidget *config_single_instance;
+GtkWidget *config_replace_and_play;
 GtkWidget *config_pause_on_click;
 GtkWidget *config_softvol;
 GtkWidget *config_forcecache;
